refactor structure & add queries models for biological data insertion
